--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="toast_refreshing">Refreshing</string>
     <string name="subtext_unable_to_contact_server">Unable to contact server</string>
     <string name="subtext_querying">Querying…</string>
+    <string name="subtext_unable_to_retrieve_player_list">Unable to retrieve player list</string>
     <string name="text_server_name">Server Name</string>
     <string name="text_map_name">Map Name</string>
     <string name="text_online_player">Player</string>
