--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -20,4 +20,14 @@
     <string name="about_text2">这是老娘第一个Android应用哦</string>
     <string name="about_text3">点图片就可以跳转到窝的Github主页辣!</string>
     <string name="about_date">2018年2月14日</string>
+    <string name="action_rcon">RCON(远程控制)</string>
+    <string name="btn_send_text">发送</string>
+    <string name="rcon_status_authorizing">正在获得授权…</string>
+    <string name="rcon_status_authorize_failed">失败.</string>
+    <string name="rcon_status_authorize_succeeded">成功.</string>
+    <string name="rcon_status_command_failed">命令失败.</string>
+    <string name="rcon_password">RCON密码</string>
+    <string name="rcon_password_hint">服务器上\"rcon_password\"这个cvar的值</string>
+    <string name="action_clear_log">清空日志</string>
+    <string name="action_edit_rcon_password">修改RCON密码</string>
 </resources>
