--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">L4D2Util</string>
+    <string name="app_name">SrcDSUtil</string>
     <string name="action_add_server">Add Server</string>
     <string name="message_add_server">Please enter server address and port: e.g. sample.com:port. Default port is 27015 if port is omitted.</string>
     <string name="action_delete_server">Remove</string>
