移除服务器限制，限制可以兼容CSGO服务器查询 适配最新A2sInfo挑战协议

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_delete_server">Remove</string>
     <string name="action_refresh_server">Refresh</string>
     <string name="toast_refreshing">Refreshing</string>
-    <string name="subtext_unable_to_contact_server">Unable to contact server</string>
+    <string name="subtext_unable_to_contact_server">Unable to contact server!</string>
     <string name="subtext_unrecognized_server">Unrecognized Server</string>
     <string name="subtext_querying">Querying…</string>
     <string name="subtext_unable_to_retrieve_player_list">Unable to retrieve player list</string>
